[package]
name = "musig2_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# disable re-randomization of the global context, which provides some
# defense-in-depth against sidechannel attacks. You should only use
# this feature if you expect the `rand` crate's thread_rng to panic.
# (If you are sure the `rand-std` feature will not be enabled, e.g.
# if you are doing a no-std build, then this feature does nothing
# and is not necessary.)


[dependencies]
secp256k1 = {version="0.26.0", features = ["rand"]}
rand = { version = "0.8", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
rand_core = "0.6"
serde_test = "1.0"
bincode = "1.3.3"

[[src]]
name = "main"
required-features = ["rand-std"]