[package]
name = "musig2_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# disable re-randomization of the global context, which provides some
# defense-in-depth against sidechannel attacks. You should only use
# this feature if you expect the `rand` crate's thread_rng to panic.
# (If you are sure the `rand-std` feature will not be enabled, e.g.
# if you are doing a no-std build, then this feature does nothing
# and is not necessary.)


[dependencies]
digest      = { version = "0.10.5", features = ["alloc"] }
ed25519-dalek = "1"
rand_core   = "0.5"
rayon       = "1.5.1"
curve25519-dalek = "3"

[dev-dependencies]
rand_chacha = "0.2"